test: isolate terminal timeout regressions (#71)
Fixes #47.

Supersedes #70, whose private-fork head could not produce a diff or CI.

Makes scenario timeouts terminal for the test process, adds
child-process regression coverage with invocation-unique progress
artifacts, and bounds parent supervision with monotonic deadlines and
forced reaping. The JVM child launches its active JDK/classpath directly
for Windows portability.

Validation on `49dfe3ae24011be2ca91d76ce59e370eb9838f75` (includes
`public/main` `bb1bf502e487274a37e26cc2205f5ef7cb03abd3`):

- `bb test`
- `clojure -J--enable-native-access=ALL-UNNAMED -M:jvm:test`
- `/home/chuck/ai-src/tools/jolt-with-chez-10.4.1 jolt -M:test`

All passed serially; durable local logs are under
`artifacts/timeout-final-postmain/`.